Implement proper inheritance and more development

--- a/Testing_polynomials.ipynb
+++ b/Testing_polynomials.ipynb
@@ -39,21 +39,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3/4y + 2x"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "f = 2*x+3/4*y\n",
-    "f"
+    "f = 3/4*x + 2*y"
    ]
   },
   {
@@ -64,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "3/4yz^2 + 2xz^2"
+       "3/4xz^2 + 2yz^2"
       ]
      },
      "execution_count": 4,
@@ -84,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "59049/1048576y^10 + 98415/65536xy^9 + 295245/16384x^2y^8 + 32805/256x^3y^7 + 76545/128x^4y^6 + 15309/8x^5y^5 + 8505/2x^6y^4 + 6480x^7y^3 + 6480x^8y^2 + 3840x^9y + 1024x^10"
+       "59049/1048576x^10 + 98415/65536x^9y + 295245/16384x^8y^2 + 32805/256x^7y^3 + 76545/128x^6y^4 + 15309/8x^5y^5 + 8505/2x^4y^6 + 6480x^3y^7 + 6480x^2y^8 + 3840xy^9 + 1024y^10"
       ]
      },
      "execution_count": 5,
@@ -98,22 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1 + -1y^2 + x^2"
+       "x^2 + -y^2 + 1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# coercison works\n",
+    "# coercion works\n",
     "(x + y)*(x - y) + 1"
    ]
   },
@@ -126,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +133,7 @@
        "x_2"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "x_2 + -1x_0"
+       "-x_0 + x_2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +181,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +201,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +221,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,16 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from polynomials import MonomialOrdering, Monomial"
+    "from monomials import MonomialOrdering, Monomial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -337,13 +325,14 @@
     }
    ],
    "source": [
+    "# 12 is the \"index\", or order in which it appears in the list of all monomials\n",
     "m = o.idx_to_monomial(12)\n",
     "print(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +341,7 @@
        "12"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +361,7 @@
        "[0, 2, 1]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +381,7 @@
        "3"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,8 +391,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the level on which multiplication is implemented, so we can multiply two monomials (to get another monomial)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -412,19 +408,18 @@
        "y^4w^2"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# this is where multiplication is implemented\n",
     "m*m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -433,13 +428,59 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(m*m) is Monomial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also have comparison (using the ordering given by the ordering `o`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xy^2w^2 x^2yw\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = Monomial([1,2,2], o)\n",
+    "t = Monomial([2,1,1], o)\n",
+    "print(s,t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s > t"
    ]
   },
   {
