Fix __repr__ method and other small tweaks

--- a/Testing_rationals.ipynb
+++ b/Testing_rationals.ipynb
@@ -128,47 +128,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/2 + 3/4 = 5/4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{r} + {s} = {r+s}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5/4"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/2 * 3/4 = 3/8\n"
+     ]
     }
    ],
    "source": [
-    "r+s"
+    "print(f'{r} * {s} = {r*s}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3/8"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"1/2 > 3/4\" is a False statement\n"
+     ]
     }
    ],
    "source": [
-    "r*s"
+    "# Q is totally ordered\n",
+    "print(f'\"{r} > {s}\" is a {r>s} statement')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +189,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,23 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2/3"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/2 / 3/4 = 2/3\n"
+     ]
     }
    ],
    "source": [
     "# Division works as expected\n",
-    "r/s"
+    "print(f'{r} / {s} = {r/s}')"
    ]
   },
   {
