--- a/Testing_polynomials.ipynb
+++ b/Testing_polynomials.ipynb
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "x^2 + -y^2 + 1"
+       "x^2 - y^2 + 1"
       ]
      },
      "execution_count": 6,
@@ -144,22 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-x_0 + x_2"
+       "-x_0^3 + x_2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x1-x3"
+    "x1-x3**3"
    ]
   },
   {
@@ -208,6 +208,26 @@
    ],
    "source": [
     "2*x+3/4*y in R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x in R.field"
    ]
   },
   {
