--- a/notebooks/chp1sec5.ipynb
+++ b/notebooks/chp1sec5.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from monomials import Monomial\n",
-    "from polynomials import PolynomialRing, Polynomial\n",
+    "from groebner.monomials import Monomial\n",
+    "from groebner.polynomials import PolynomialRing, Polynomial\n",
     "\n",
     "def pad(m, n, zero):\n",
     "    # makes two lists the same size by appending zero\n",
@@ -501,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
