Implement multivariate divison algorithm

--- a/notebooks/Testing_polynomials.ipynb
+++ b/notebooks/Testing_polynomials.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "f = 3/4*x + 2*y"
+    "f = 3/4*x**2 + 2*y"
    ]
   },
   {
@@ -61,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "3/4xz^2 + 2yz^2"
+       "3/4x^2z^2 + 2yz^2"
       ]
      },
      "execution_count": 4,
@@ -81,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "59049/1048576x^10 + 98415/65536x^9y + 295245/16384x^8y^2 + 32805/256x^7y^3 + 76545/128x^6y^4 + 15309/8x^5y^5 + 8505/2x^4y^6 + 6480x^3y^7 + 6480x^2y^8 + 3840xy^9 + 1024y^10"
+       "59049/1048576x^20 + 98415/65536x^18y + 295245/16384x^16y^2 + 32805/256x^14y^3 + 76545/128x^12y^4 + 15309/8x^10y^5 + 8505/2x^8y^6 + 6480x^6y^7 + 6480x^4y^8 + 3840x^2y^9 + 1024y^10"
       ]
      },
      "execution_count": 5,
@@ -169,6 +169,91 @@
    ],
    "source": [
     "x1-x3**3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Leading terms, coefficients, and monomials\n",
+    "Polynomials have the following helper methods mirroring $\\text{LT},$ $\\text{LM},$ and $\\text{LC}$ from the book:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/4\n",
+      "<class 'groebner.rationals.Rational'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f.LC())\n",
+    "print(type(f.LC()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x^2\n",
+      "<class 'groebner.monomials.Monomial'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f.LM())\n",
+    "print(type(f.LM()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/4x^2\n",
+      "<class 'groebner.polynomials.Polynomial'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f.LT())\n",
+    "print(type(f.LT()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.LT() == f.LC() * R.coerce(f.LM())"
    ]
   },
   {
